// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "postgresql"
  url      = env("POSTGRES_PRISMA_URL")
}

model User {
  id         Int       @id @default(autoincrement())
  fullName   String
  username   String    @unique
  pictureUrl String
  posts      Post[]
  comments   Comment[]

  createdAt DateTime @default(now())
  updatedAt DateTime @default(now()) @updatedAt
}

model Community {
  id    Int    @id @default(autoincrement())
  name  String @unique
  posts Post[]

  createdAt DateTime @default(now())
  updatedAt DateTime @default(now()) @updatedAt
}

model Post {
  id          Int       @id @default(autoincrement())
  title       String
  detail      String
  user        User      @relation(fields: [userId], references: [id])
  userId      Int
  community   Community @relation(fields: [communityId], references: [id])
  communityId Int
  comments    Comment[]

  createdAt DateTime @default(now())
  updatedAt DateTime @default(now()) @updatedAt
}

model Comment {
  id      Int    @id @default(autoincrement())
  comment String
  post    Post   @relation(fields: [postId], references: [id], onDelete: Cascade)
  postId  Int
  user    User   @relation(fields: [userId], references: [id])
  userId  Int

  createdAt DateTime @default(now())
  updatedAt DateTime @default(now()) @updatedAt
}
